compiler/testData/cli/js/notValidLibraryDir.out
compiler/testData/cli/js/withLib.kt:2:8: error: unresolved reference 'library'.
import library.sample.*
       ^^^^^^^
compiler/testData/cli/js/withLib.kt:6:13: error: unresolved reference 'pairAdd'.
    val x = pairAdd(p)
            ^^^^^^^
COMPILATION_ERROR
